# ytb_nav_backend

./: .gitignore  Dockerfile  README.md  deploy.sh  pyproject.toml  requirements.txt  start-dev.sh
.github/workflows/: deploy.yml
app/: main.py  queue_worker.py  ytb_common.py  ytb_get_info.py  ytb_mcp_server.py  ytb_summarizer.py  ytb_types.py
app/agents/: openai_summarizer.py  prompts.py  yt_dlp_summarizer.py
app/api/endpoints/: yt_dlp.py
app/config/: redis_config.py  settings.py
app/models/: youtube.py
app/services/: yt_dlp_service.py
app/utils/: StderrLogger.py  yt_dlp_utils.py  yt_dlp_utils.py.b
